--- a/hugo.toml
+++ b/hugo.toml
@@ -21,13 +21,13 @@ home = ["HTML", "RSS", "Algolia"]
   header_image = "/img/sbg.webp"
   SEOTitle = "Singularity Blogs"
   header_title = "Singularity"
-  description = "赵化冰，程序员, 开源爱好者，生活探险家 | 这里是 赵化冰 的博客，与你一起发现更大的世界。"
-  keyword = "赵化冰, zhaohuabing, Zhaohuabing, , 赵化冰的网络日志, 赵化冰的博客, Zhaohuabing Blog, 博客, 个人网站, 互联网, Web, 云原生, PaaS, Istio, Kubernetes, 微服务, Microservice"
+  description = "Singularity Blogs"
+  keyword = "Singularity Blogs, Web Development"
   slogan = "Blogs"
-  upstreamAttribution = true
+  upstreamAttribution = false 
 
-  image_404 = "img/404-bg.jpg"
-  title_404 = "你来到了没有知识的荒原 :("
+  image_404 = "/img/sbg.webp"
+  title_404 = "404 Not Found"
   omit_categories = false
 
   # leancloud storage for page view counter
@@ -36,17 +36,17 @@ home = ["HTML", "RSS", "Algolia"]
   leancloud_app_key = ""
 
   # algolia site search
-  algolia_search = true
+  algolia_search = false 
   algolia_appId = ""
   algolia_indexName = ""
   algolia_apiKey = ""
 
   # Sidebar settings
-  sidebar_about_description = "Software Developer, Open Source Enthusiast and Life Adventurer"
+  sidebar_about_description = "Anthony Cavuoti. Web Developer. Owner of Singularity Development"
   #sidebar_avatar = "img/avatar-zhaohuabing.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
-  sidebar_avatar = "img/zhaohuabing.png"      # use absolute URL, seeing it's used in both `/` and `/about/`
+  sidebar_avatar = "img/prp.webp"      # use absolute URL, seeing it's used in both `/` and `/about/`
 
-  featured_tags = true 
+  featured_tags = false 
   featured_condition_size = 1 
 
   # Baidu Analytics
@@ -63,17 +63,17 @@ home = ["HTML", "RSS", "Algolia"]
 
   # Artalk comments
   # Follow https://artalk.js.org/ to set up your own server
-  artalk_enable = true
+  artalk_enable = false 
   artalk_server = "https://xxx.xxx.com"
   artalk_site = "xxx blog"
 
   #Enable wechat pay & alipay to allow readers send reward money if they like the articles 
-  reward = true 
+  reward = false 
   # reward_guide = "如果这篇文章对你有用,请随意打赏" 
 
   friends = true
   bookmarks = false
-  about_me = true
+  about_me = true 
 
   # Last posts
   last_posts = true
@@ -87,16 +87,16 @@ home = ["HTML", "RSS", "Algolia"]
   icon = "img/sp.webp"
 
   [params.social]
-  rss            = true 
-  email          = "youremail@gmail.com"
-  #facebook      = "full profile url in facebook"
+  rss            = false 
+  email          = "anthonycavuoti@gmail.com"
+  facebook      = "https://www.facebook.com/singularitydevelopment"
   #googleplus    = "full profile url in googleplus"
   #twitter       = "full profile url in twitter"
-  linkedin       = "https://www.linkedin.com/in/yourlinkedinid"
-  stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
-  #instagram     = "full profile url in instagram"
-  github         = "https://github.com/yourgithub"
-  wechat         = "your wechat qr code image"
+  linkedin       = "https://www.linkedin.com/groups/14010152"
+  #stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
+  instagram     = "https://www.instagram.com/singularity_development"
+  github         = "https://github.com/Ant3ney"
+  #wechat         = "your wechat qr code image"
   #medium        = "full profile url in medium"
   #slack         = "full workspace url in slack"
   #pinterest     = "full profile url in pinterest"
@@ -108,8 +108,8 @@ home = ["HTML", "RSS", "Algolia"]
   #git           = "full profile url for git user"
   
   [[params.friend_link]]
-  title = "Linda的博客"
-  href =  "https://zhaozhihan.com"
+  title = "Anthony"
+  href =  "https://www.anthonycavuoti.com"
 
   [[params.bookmark_link]]
   title =  "Martin Fowler"
@@ -132,7 +132,7 @@ home = ["HTML", "RSS", "Algolia"]
   href =  "/notes/"
   [[params.additional_menus]]
   title =  "ABOUT"
-  href =  "/about/"
+  href =  "https://anthonycavuoti.com"
 
 [outputFormats.Algolia]
 baseName = "algolia"
