--- a/hugo.toml
+++ b/hugo.toml
@@ -84,7 +84,7 @@ home = ["HTML", "RSS", "Algolia"]
   custom_css = ["css/custom-overrides.css"]
   #custom_js = ["js/lightbox.js", "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js", "js/main.js"]
 
-  icon = "img/sp.webp"
+  icon = "/img/sp.webp"
 
   [params.social]
   rss            = false 
